attempt to fix mobile cut off again

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,10 +2,8 @@
   padding: 0 2rem;
 }
 
-@media screen and (max-width: 320px) {
-  #__next {
-    display: flex
-  }
+#__next {
+  display: flex
 }
 
 .main {
